--- a/index.css
+++ b/index.css
@@ -1,5 +1,9 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+body.light {
+  background-color: white;
+  color: black;
+}
+
+body.dark {
+  background-color: #111;
+  color: white;
 }
