--- a/index.css
+++ b/index.css
@@ -42,7 +42,7 @@ body.dark {
 } */
 /* banner  */
 
-.sale-banner-container {
+/* .sale-banner-container {
   width: 100%;
   height: 70vh;
   position: relative;
@@ -53,9 +53,9 @@ body.dark {
   height: 100%;
   object-fit: cover;
   /* Fixes width issue */
-}
+/* } */
 
-.left-top-sale-box {
+/* .left-top-sale-box {
   position: absolute;
   top: 5%;
   left: 5%;
@@ -90,10 +90,11 @@ body.dark {
 .time-label {
   font-size: 12px;
   color: #ddd;
-}
+} */
+*/
 
 /* video play and pause  */
-/* .video-container {
+*/ .video-container {
   text-align: center;
   margin-top: 30px;
 }
@@ -111,4 +112,4 @@ body.dark {
 
 .video-btn:hover {
   background: #555;
-} */
+}
